src/content/tools/docs/2.7.1/pipeline_lint_tests/index.md
# Pipeline lint tests

# Tests:

- [actions_awsfulltest](actions_awsfulltest)
  - [`PipelineLint.actions_awsfulltest()`](actions_awsfulltest#nf_core.lint.PipelineLint.actions_awsfulltest)
- [actions_awstest](actions_awstest)
  - [`PipelineLint.actions_awstest()`](actions_awstest#nf_core.lint.PipelineLint.actions_awstest)
- [actions_ci](actions_ci)
  - [`PipelineLint.actions_ci()`](actions_ci#nf_core.lint.PipelineLint.actions_ci)
- [actions_schema_validation](actions_schema_validation)
  - [`PipelineLint.actions_schema_validation()`](actions_schema_validation#nf_core.lint.PipelineLint.actions_schema_validation)
- [files_exist](files_exist)
  - [`PipelineLint.files_exist()`](files_exist#nf_core.lint.PipelineLint.files_exist)
- [files_unchanged](files_unchanged)
  - [`PipelineLint.files_unchanged()`](files_unchanged#nf_core.lint.PipelineLint.files_unchanged)
- [merge_markers](merge_markers)
  - [`PipelineLint.merge_markers()`](merge_markers#nf_core.lint.PipelineLint.merge_markers)
- [nextflow_config](modules_json)
  - [`PipelineLint.modules_json()`](modules_json#nf_core.lint.PipelineLint.modules_json)
- [modules_structure](modules_structure)
  - [`PipelineLint.modules_structure()`](modules_structure#nf_core.lint.PipelineLint.modules_structure)
- [multiqc_config](multiqc_config)
  - [`PipelineLint.multiqc_config()`](multiqc_config#nf_core.lint.PipelineLint.multiqc_config)
- [nextflow_config](nextflow_config)
  - [`PipelineLint.nextflow_config()`](nextflow_config#nf_core.lint.PipelineLint.nextflow_config)
- [pipeline_name_conventions](pipeline_name_conventions)
  - [`PipelineLint.pipeline_name_conventions()`](pipeline_name_conventions#nf_core.lint.PipelineLint.pipeline_name_conventions)
- [pipeline_todos](pipeline_todos)
  - [`PipelineLint.pipeline_todos()`](pipeline_todos#nf_core.lint.PipelineLint.pipeline_todos)
- [readme](readme)
  - [`PipelineLint.readme()`](readme#nf_core.lint.PipelineLint.readme)
- [schema_description](schema_description)
  - [`PipelineLint.schema_description()`](schema_description#nf_core.lint.PipelineLint.schema_description)
- [schema_lint](schema_lint)
  - [`PipelineLint.schema_lint()`](schema_lint#nf_core.lint.PipelineLint.schema_lint)
- [schema_params](schema_params)
  - [`PipelineLint.schema_params()`](schema_params#nf_core.lint.PipelineLint.schema_params)
- [template_strings](template_strings)
  - [`PipelineLint.template_strings()`](template_strings#nf_core.lint.PipelineLint.template_strings)
- [version_consistency](version_consistency)
  - [`PipelineLint.version_consistency()`](version_consistency#nf_core.lint.PipelineLint.version_consistency)
